--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "dcat/laravel-admin": "~2.0"
+        "dcat/laravel-admin": "~2.0",
+        "laravel/helpers": "^1.6"
     },
     "autoload": {
         "psr-4": {
